# conways-game-of-life

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  board.cpp  board.h  main.cpp  renderer.cpp  renderer.h
